--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3",
+    "vercel": "^35.1.0",
     "vite": "^5.3.3",
-    "vercel": "^35.1.0"
+    "vite-plugin-static-copy": "^3.1.0"
   }
 }
